TODO: Allow IExtendedSequence to be simultaneous